--- a/index.css
+++ b/index.css
@@ -7,3 +7,73 @@ button {
     border: none;
     border-radius: 2px;
 }
+
+.ReactModal__Overlay {
+    z-index: 50;
+}
+
+.modal-message {
+    margin-top: 20px;
+}
+
+@keyframes lds-rolling {
+    0% {
+        -webkit-transform: translate(-50%, -50%) rotate(0deg);
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100% {
+        -webkit-transform: translate(-50%, -50%) rotate(360deg);
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+@-webkit-keyframes lds-rolling {
+    0% {
+        -webkit-transform: translate(-50%, -50%) rotate(0deg);
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    100% {
+        -webkit-transform: translate(-50%, -50%) rotate(360deg);
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
+.lds-rolling {
+    position: relative;
+}
+
+.lds-rolling div,
+.lds-rolling div:after {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border: 6px solid #3398c0;
+    border-top-color: transparent;
+    border-radius: 50%;
+}
+
+.lds-rolling div {
+    -webkit-animation: lds-rolling 1.6s linear infinite;
+    animation: lds-rolling 1.6s linear infinite;
+    top: 25px;
+    left: 25px;
+}
+
+.lds-rolling div:after {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.lds-rolling {
+    text-align: center;
+    margin: auto;
+    width: 50px !important;
+    height: 50px !important;
+    -webkit-transform: translate(-25px, -25px) scale(1) translate(25px, 25px);
+    transform: translate(-25px, -25px) scale(1) translate(25px, 25px);
+}
+
+.loading-container {
+    margin: auto;
+    text-align: center;
+}
